# Bot-For-Maimai

./: LICENSE
Bot-For-Maimai/: README.md  pyproject.toml
Bot-For-Maimai/src/plugins/LKT/core/: divide.py  round.py  stream.py
Bot-For-Maimai/src/plugins/LKT/libraries/: roomdata.py
Bot-For-Maimai/src/plugins/bread/: __init__.py  config.py  data.py  main.py
Bot-For-Maimai/src/plugins/check_in/: __init__.py  data.py
Bot-For-Maimai/src/plugins/date/: __init__.py  config.py  main.py
Bot-For-Maimai/src/plugins/defend_withdraw/: __init__.py  config.py
Bot-For-Maimai/src/plugins/deltaforce/: __init__.py
Bot-For-Maimai/src/plugins/help/: __init__.py
Bot-For-Maimai/src/plugins/ktt/: __init__.py
Bot-For-Maimai/src/plugins/maiscoreupdate/: __init__.py  data.py  main.py
Bot-For-Maimai/src/plugins/points/: __init__.py  data.py
Bot-For-Maimai/src/plugins/room/: __init__.py  room.py
Bot-For-Maimai/src/plugins/temp/: __init__.py
Bot-For-Maimai/src/plugins/update/: __init__.py  config.py
Bot-For-Maimai/src/plugins/version/: __init__.py
